Close #72: Add checkbox for OCSP staple feature
Also support them in XCA template and transformation from
certificate and request.

--- a/ui/NewX509.ui
+++ b/ui/NewX509.ui
@@ -854,6 +854,13 @@
          <item row="2" column="0">
           <widget class="DoubleClickLabel" name="crldpLbl"/>
          </item>
+         <item row="4" column="2">
+          <widget class="QCheckBox" name="OCSPstaple">
+           <property name="text">
+            <string notr="true">OCSP Must Staple</string>
+           </property>
+          </widget>
+         </item>
         </layout>
        </item>
       </layout>
