--- a/misc/xca.wxs
+++ b/misc/xca.wxs
@@ -38,6 +38,7 @@
                 <Directory Id="INSTALLDIR" Name="xca" >
                     <Directory Id="platforms" Name="platforms"/>
                     <Directory Id="sqldrivers" Name="sqldrivers"/>
+                    <Directory Id="styles" Name="styles"/>
                     <Directory Id="html" Name="html"/>
                     <Directory Id="i18n" Name="i18n"/>
                 </Directory>
@@ -282,7 +283,6 @@
             <Component Id="Ci18n.zh_CN" Guid="2e2c0f43-a59e-4b3f-bd18-d13e1622f4a5">
                 <File Id="xca_zh_CN.qm" Source="i18n/xca_zh_CN.qm" KeyPath="yes"/>
             </Component>
-
         </DirectoryRef>
 
         <DirectoryRef Id="platforms">
@@ -290,6 +290,7 @@
                 <File Id="qwindows.dll" Source="platforms/qwindows.dll" KeyPath="yes"/>
             </Component>
         </DirectoryRef>
+
         <DirectoryRef Id="sqldrivers">
             <Component Id="Cqsqlite" Guid="6a039415-5278-424a-99b5-fc81b959a829">
                 <File Id="qsqlite.dll" Source="sqldrivers/qsqlite.dll" KeyPath="yes"/>
@@ -302,6 +303,15 @@
             </Component>
             <Component Id="Cqsqlpsql" Guid="526161ae-1023-411e-b7a1-747c93923b31">
                 <File Id="qsqlpsql.dll" Source="sqldrivers/qsqlpsql.dll"/>
+            </Component>
+        </DirectoryRef>
+
+        <DirectoryRef Id="styles">
+            <Component Id="Cqwindowsvistastyle" Guid="8e3dfb18-9a16-4b94-a5a5-90d9c4cc0038">
+                <File Id="qwindowsvistastyle.dll" Source="styles/qwindowsvistastyle.dll" KeyPath="yes"/>
+            </Component>
+            <Component Id="Cqwindowsvistastyled" Guid="32017441-2a0e-4811-ac78-acc58f6087c1">
+                <File Id="qwindowsvistastyled.dll" Source="styles/qwindowsvistastyled.dll"/>
             </Component>
         </DirectoryRef>
 
@@ -345,6 +355,8 @@
             <ComponentRef Id="Cxca.exe" />
             <ComponentRef Id="Cqwindows" />
             <ComponentRef Id="Cqsqlite" />
+            <ComponentRef Id="Cqwindowsvistastyle" />
+            <ComponentRef Id="Cqwindowsvistastyled" />
             <ComponentRef Id="Clibstdcpp6"/>
             <ComponentRef Id="Clibwinpthread1"/>
             <ComponentRef Id="Clibgcc_s_seh1"/>
