--- a/ui/Options.ui
+++ b/ui/Options.ui
@@ -325,8 +325,11 @@ Especially EC and DSA are only defined with SHA1 in the PKCS#11 specification.</
       </attribute>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="QListWidget" name="pkcs11List">
+        <widget class="QListView" name="pkcs11List">
          <property name="dragEnabled">
+          <bool>true</bool>
+         </property>
+         <property name="acceptDrops">
           <bool>true</bool>
          </property>
          <property name="dragDropOverwriteMode">
