Move Help window into separate class
Start it on application start and keep it around
for context sensitive help.

--- a/ui/Help.ui
+++ b/ui/Help.ui
@@ -3,7 +3,7 @@
  <comment></comment>
  <exportmacro></exportmacro>
  <class>Help</class>
- <widget class="QDialog" name="Help" >
+ <widget class="QWidget" name="Help" >
   <property name="geometry" >
    <rect>
     <x>0</x>
