Add context sensitive documentation
All dialogs get the "Qt::WindowModal" modality to
operate the Help window in parallel
while also blocking the dialog parent windows.

The manageRevocations() moved from model to view

The Details dialogs become more self-sufficient.
There is a statc start method that shows the dialog and
updates name and comment after accept().
This allows recursive starts of certificate details and
independence of mainwin.
It is necessary to set the current toplevel widget as parent
for the next dialog to not block the application.

--- a/ui/Help.ui
+++ b/ui/Help.ui
@@ -92,7 +92,7 @@
    <sender>buttonOk</sender>
    <signal>clicked()</signal>
    <receiver>Help</receiver>
-   <slot>accept()</slot>
+   <slot>hide()</slot>
    <hints>
     <hint type="sourcelabel" >
      <x>668</x>
@@ -135,6 +135,18 @@
      <y>254</y>
     </hint>
    </hints>
+  </connection>
+  <connection>
+   <sender>textbox</sender>
+   <signal>backwardAvailable(bool)</signal>
+   <receiver>back</receiver>
+   <slot>setEnabled(bool)</slot>
+  </connection>
+  <connection>
+   <sender>textbox</sender>
+   <signal>forwardAvailable(bool)</signal>
+   <receiver>forward</receiver>
+   <slot>setEnabled(bool)</slot>
   </connection>
  </connections>
 </ui>
