Replace certificate while renewing it
This commit also changes the default state of
the "Revoke old certificate" checkbox to unchecked.
The reasoning for this is that by renewing a certificate
its lifetime and subsequently validity are prolonged,
which therefore implies equal trustworthiness
for both new and old certificates, which does not intend
the revocation of the latter.

--- a/ui/CertExtend.ui
+++ b/ui/CertExtend.ui
@@ -216,6 +216,16 @@
       <string>Revoke old certificate</string>
      </property>
      <property name="checked">
+      <bool>false</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="replace">
+     <property name="text">
+      <string>Replace old certificate</string>
+     </property>
+     <property name="checked">
       <bool>true</bool>
      </property>
     </widget>
